--- a/CourseCleanup/packages.config
+++ b/CourseCleanup/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net47" />
   <package id="bootstrap" version="3.0.0" targetFramework="net47" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
+  <package id="Hangfire.Core" version="1.6.17" targetFramework="net47" />
+  <package id="Hangfire.Ninject" version="1.2.0" targetFramework="net47" />
+  <package id="Hangfire.SqlServer" version="1.6.17" targetFramework="net47" />
   <package id="jQuery" version="1.10.2" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
@@ -34,7 +37,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.6.2" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="Respond" version="1.2.0" targetFramework="net47" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.5.2" targetFramework="net47" />
 </packages>
