--- a/CourseCleanup.Repository/CourseCleanup.Repository.csproj
+++ b/CourseCleanup.Repository/CourseCleanup.Repository.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Migrations\201709282202290_InitialCreate.Designer.cs">
       <DependentUpon>201709282202290_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710032131573_BuildDeletedCourseModel.cs" />
+    <Compile Include="Migrations\201710032131573_BuildDeletedCourseModel.Designer.cs">
+      <DependentUpon>201710032131573_BuildDeletedCourseModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryBase.cs" />
@@ -75,6 +79,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201709282202290_InitialCreate.resx">
       <DependentUpon>201709282202290_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710032131573_BuildDeletedCourseModel.resx">
+      <DependentUpon>201710032131573_BuildDeletedCourseModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
