--- a/CourseCleanup/packages.config
+++ b/CourseCleanup/packages.config
@@ -38,7 +38,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net47" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net47" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="Respond" version="1.2.0" targetFramework="net47" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
