--- a/CourseCleanup.Models/CourseCleanup.Models.csproj
+++ b/CourseCleanup.Models/CourseCleanup.Models.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeletedCourse.cs" />
+    <Compile Include="Enums\CourseStatus.cs" />
+    <Compile Include="UnusedCourse.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
