--- a/CourseCleanup.BLL/CourseCleanup.BLL.csproj
+++ b/CourseCleanup.BLL/CourseCleanup.BLL.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeletedCourseBLL.cs" />
+    <Compile Include="UnusedCourseBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
