--- a/CourseCleanup.Interface/CourseCleanup.Interface.csproj
+++ b/CourseCleanup.Interface/CourseCleanup.Interface.csproj
@@ -41,9 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\IBLL.cs" />
-    <Compile Include="BLL\IDeletedCourseBLL.cs" />
+    <Compile Include="BLL\IUnusedCourseBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IDeletedCourseRepository.cs" />
+    <Compile Include="Repository\IUnusedCourseRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
   </ItemGroup>
   <ItemGroup />
