--- a/CourseCleanup.BLL/CourseCleanup.BLL.csproj
+++ b/CourseCleanup.BLL/CourseCleanup.BLL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CourseSearchQueueBLL.cs" />
     <Compile Include="UnusedCourseBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
