--- a/CourseCleanup/packages.config
+++ b/CourseCleanup/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net47" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net47" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net47" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
-  <package id="jQuery" version="1.10.2" targetFramework="net47" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net47" />
+  <package id="jQuery" version="3.2.1" targetFramework="net47" />
+  <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net47" />
@@ -40,6 +40,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="Respond" version="1.2.0" targetFramework="net47" />
+  <package id="Telerik.UI.for.AspNet.Mvc5" version="2017.3.1206" targetFramework="net47" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.5.2" targetFramework="net47" />
 </packages>
