--- a/CourseCleanup/CourseCleanup.csproj
+++ b/CourseCleanup/CourseCleanup.csproj
@@ -3514,7 +3514,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Canvas.Clients\Canvas.Clients.csproj">
