--- a/CourseCleanup.Repository/CourseCleanup.Repository.csproj
+++ b/CourseCleanup.Repository/CourseCleanup.Repository.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\201711281746127_AddCourseSearchQueueIdToUnusedCourse.Designer.cs">
       <DependentUpon>201711281746127_AddCourseSearchQueueIdToUnusedCourse.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801041734090_AddTermToUnusedCourse.cs" />
+    <Compile Include="Migrations\201801041734090_AddTermToUnusedCourse.Designer.cs">
+      <DependentUpon>201801041734090_AddTermToUnusedCourse.cs</DependentUpon>
+    </Compile>
     <Compile Include="UnusedCourseRepository.cs" />
     <Compile Include="Maps\UnusedCourseMap.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -91,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711281746127_AddCourseSearchQueueIdToUnusedCourse.resx">
       <DependentUpon>201711281746127_AddCourseSearchQueueIdToUnusedCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801041734090_AddTermToUnusedCourse.resx">
+      <DependentUpon>201801041734090_AddTermToUnusedCourse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
