course search and delete working

--- a/CourseCleanup.BLL/CourseCleanup.BLL.csproj
+++ b/CourseCleanup.BLL/CourseCleanup.BLL.csproj
@@ -30,8 +30,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Hermes.Clients, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hermes.Clients.1.0.8\lib\net461\Hermes.Clients.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hermes.Clients.1.0.8\lib\net461\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RSS.EmailEngine.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hermes.Clients.1.0.8\lib\net461\RSS.EmailEngine.Models.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hermes.Clients.1.0.8\lib\net461\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CourseSearchQueueBLL.cs" />
+    <Compile Include="SendEmailBLL.cs" />
     <Compile Include="UnusedCourseBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -53,6 +67,10 @@
       <Project>{2CDF1514-F14D-4BBC-90FB-E29176084D4D}</Project>
       <Name>CourseCleanup.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
