--- a/Canvas.Clients/Canvas.Clients.csproj
+++ b/Canvas.Clients/Canvas.Clients.csproj
@@ -65,7 +65,9 @@
     <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsersClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
