--- a/CourseCleanup.Interface/CourseCleanup.Interface.csproj
+++ b/CourseCleanup.Interface/CourseCleanup.Interface.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="BLL\IBLL.cs" />
     <Compile Include="BLL\ICourseSearchQueueBLL.cs" />
+    <Compile Include="BLL\ISendEmailBLL.cs" />
     <Compile Include="BLL\IUnusedCourseBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ICourseSearchQueueRepository.cs" />
