--- a/CourseCleanup.Service/packages.config
+++ b/CourseCleanup.Service/packages.config
@@ -3,5 +3,6 @@
   <package id="elmah" version="1.2.2" targetFramework="net47" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
+  <package id="Hermes.Clients" version="1.0.8" targetFramework="net47" />
   <package id="Ninject" version="3.3.4" targetFramework="net47" />
 </packages>
